[metadata]
name = mkd
version = 0.0.0
author = Pedro Maciel Xavier
author_email = pedromxavier@poli.ufrj.br
description = mkd: A Markdown pill
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3
url = https://github.com/pedromxavier/mkd
project_urls = 
	Bug Tracker = https://github.com/pedromxavier/mkd/issues
	Source = https://github.com/pedromxavier/mkd

[options]
python_requires = >=3.7, <4
package_dir = 
	=src
packages = 
	mkd
	mkd.cli
	mkd.error
	mkd.items
	mkd.mkdlib
	mkd.mkdparser

scripts = 
	bin/mkd
install_requires = 
	argparse >= 1.4.0
	pyckage >= 0.1.1
	cstream >= 1.0.0
	ply >= 3.0.0

[options.data_files]
md_data = 
	data/.md-config.json

[options.entry_points]
console_scripts = 
	mkd = mkd:main

